--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import "./base/reset";
 @import "./base/fonts";
 @import "./components/_slick";
+@import "./layout/style-slick-arrow";
 @import "./layout/general";
 @import "./layout/header";
 @import "./layout/inedx";
