--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -2,7 +2,8 @@
 $base-bg: #fff;
 $base-font-size: 18px;
 $base-line-height: 22px;
-$base-font-family: "Museo Sans Cyrl", sans-serif;
+$base-font-family: "Museo Sans Cyrl",
+sans-serif;
 
 /* main variables */
 
@@ -17,8 +18,8 @@ $font-size-h1: 60px;
 $line-height-h1: 72px;
 $font-size-h2: 36px;
 $line-height-h2: 43px;
-$font-size-h3: 28px;
-$line-height-h3: 32px;
+$font-size-h3: 24px;
+$line-height-h3: 29px;
 
 // color
 $bg-dark: #25282a;
@@ -35,6 +36,8 @@ $light-gray: #B1B1B1;
 $dark-gray: #454545;
 $yellow: #FF9300;
 $red-active: #FA4616;
+$slider-color-arrow: #898989;
+$tab-color: #777777;
 
 $border-gray: #d8d8d8;
 $border-checkbox: #B1B1B1;
