--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -1,3 +1,16 @@
+body {
+    font-family: $base-font-family;
+    background-color: $base-bg;
+    height: 100%;
+    font-weight: 300;
+    line-height: $base-line-height;
+    color: $text-color;
+    position: relative;
+    font-size: $base-font-size !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .btn {
     display: inline-flex;
     align-items: center;
@@ -22,8 +35,8 @@
     height: 75px;
     width: 350px;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: $base-font-size + 6px;
+    line-height: $base-line-height + 7px;
     color: $text-color-white;
     background-color: $btn-red;
     box-shadow: 0px 10px 35px $shadow-red;
@@ -138,8 +151,8 @@
         background: $bg-spinner;
         border: none;
         text-align: center;
-        font-size: 18px;
-        line-height: 22px;
+        font-size: $base-font-size;
+        line-height: $base-line-height;
         font-weight: 300;
     }
 
@@ -151,8 +164,8 @@
         height: 55px;
         width: 55px;
         cursor: pointer;
-        font-size: 24px;
-        line-height: 29px;
+        font-size: $base-font-size + 6px;
+        line-height: $base-line-height + 7px;
         color: $text-color-white;
         background-color: $btn-red;
         display: flex;
@@ -218,5 +231,50 @@
             height: 15px;
             background: url(../image/icons/checked.svg) no-repeat center center;
         }
+    }
+}
+
+// style tabs navigation
+
+.nav-pills {
+    .nav-link {
+        color: $tab-color;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        padding-left: 62px;
+        border-left: 3px solid transparent;
+        @include radius(0);
+
+        &:hover,
+        &.active {
+            color: $text-color;
+            font-weight: 600;
+        }
+
+        &.active {
+            background-color: transparent;
+            border-color: $yellow;
+        }
+    }
+}
+
+@media only screen and (max-width: 1999.8px) {
+    body {
+        line-height: $base-line-height - 5px;
+        font-size: $base-font-size - 4px !important;
+    }
+
+    .title-section,
+    .title-white {
+        font-size: $font-size-h2;
+        line-height: $font-size-h2;
+    }
+
+    .btn-red {
+        height: 55px;
+        width: 270px;
+        font-size: $base-font-size;
+        line-height: $base-line-height;
     }
 }
