--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -41,8 +41,8 @@
                 &::after {
                     content: '/';
                     display: inline-block;
-                    font-size: 18px;
-                    line-height: 22px;
+                    font-size: $base-font-size;
+                    line-height: $base-line-height;
                     color: $text-color-white;
                     padding-left: 6px;
                 }
@@ -50,8 +50,8 @@
 
             &.active {
                 color: $text-color-white;
-                font-size: 18px;
-                line-height: 22px;
+                font-size: $base-font-size;
+                line-height: $base-line-height;
             }
         }
     }
@@ -117,8 +117,6 @@
         line-height: 19px;
 
         >li {
-            position: relative;
-
             a {
                 display: inline-block;
                 position: relative;
@@ -149,7 +147,191 @@
     }
 }
 
-@media screen and (max-width: 1199.8px) {}
+@media screen and (max-width: 1199.8px) {
+    .header {
+        padding: 25px 0;
+
+        &__top {
+            padding-left: 61px;
+            position: relative;
+            font-size: 12px;
+            line-height: 14px;
+            flex-wrap: wrap;
+
+            .btn-border {
+                width: 90px;
+                height: 22px;
+                font-size: 12px;
+                line-height: 14px;
+            }
+
+            .social-networks {
+                margin-top: 25px;
+                justify-content: flex-end;
+                width: calc(100% - 242px);
+            }
+        }
+
+        &__logo {
+
+            >a {
+                width: 90px;
+                margin-right: 12px;
+            }
+
+            >span {
+                width: 180px;
+            }
+        }
+
+        .language {
+            >a {
+
+                &:first-child {
+                    &::after {
+                        font-size: 14px;
+                        line-height: 17px;
+                    }
+                }
+
+                &.active {
+                    font-size: 14px;
+                    line-height: 17px;
+                }
+            }
+        }
+    }
+
+    .phone {
+        margin: 25px 0 0 auto;
+        position: relative;
+        padding-left: 10px;
+
+        &__list {
+            display: none;
+            width: 100%;
+            padding: 10px;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 100%;
+            background-color: $bg-dark;
+            z-index: 2;
+
+            >li {
+                margin-bottom: 6px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+
+        &__number {
+            font-size: $base-font-size;
+            line-height: $base-line-height;
+
+            >img {
+                margin-right: 8px;
+                width: 14px;
+            }
+        }
+
+        .arrow-down {
+            top: -10px;
+            margin-left: 8px;
+        }
+    }
+
+    .menu {
+        background: #2E2E2F;
+        box-shadow: 0px 10px 100px rgba(0, 0, 0, 0.25);
+        width: 210px;
+        padding: 19px 22px 23px 30px;
+        position: absolute;
+        top: 76px;
+        display: none;
+        z-index: 100;
+        margin: 0;
+        // @include transition(transform 0.4s);
+        // @include transform(translateX(-200%));
+
+        // &.open {
+        //     @include transform(translateX(0));
+        // }
+
+        &__btn {
+            position: absolute;
+            top: 30px;
+            height: 17px;
+            width: 23px;
+            background: transparent;
+            cursor: pointer;
+            z-index: 100;
+
+            >span {
+                display: block;
+                position: absolute;
+                top: 50%;
+                margin-top: -2px;
+                left: 0;
+                width: 100%;
+                height: 3px;
+                background-color: $white;
+
+                &::after,
+                &::before {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 50%;
+                    margin-top: -2px;
+                    left: 0;
+                    width: 100%;
+                    height: 3px;
+                    background-color: $white;
+                    @include transition(transform 0.4s);
+                }
+
+                &::after {
+                    @include transform(translateY(-7px));
+                }
+
+                &::before {
+                    @include transform(translateY(7px));
+                }
+            }
+
+            &.active {
+                >span {
+                    height: 0;
+
+                    &::after {
+                        @include transform(rotate(-42deg));
+                    }
+
+                    &::before {
+                        @include transform(rotate(42deg));
+                    }
+                }
+            }
+        }
+
+        &__list {
+            display: block;
+            font-size: 14px;
+            line-height: 17px;
+
+            >li {
+                margin-bottom: 16px;
+
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
 
 @media screen and (max-width: 991.8px) {}
 
